apps/oxlint/src/snapshots/fixtures__tsconfig_--tsconfig non-exists.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --tsconfig non-exists.json
working directory: fixtures/tsconfig
----------
The tsconfig file "<cwd>/fixtures/tsconfig/non-exists.json" does not exist, Please provide a valid tsconfig file.
----------
CLI result: InvalidOptionTsConfig
----------
