apps/oxlint/src/snapshots/fixtures__tsgolint-disable-directives_--type-aware -c .oxlintrc.json test.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware -c .oxlintrc.json test.ts
working directory: fixtures/tsgolint-disable-directives
----------

  ! typescript-eslint(no-floating-promises): Promises must be awaited.
    ,-[test.ts:9:1]
  8 | // This should trigger a diagnostic (not disabled)
  9 | Promise.resolve(84);
    : ^^^^^^^^^^^^^^^^^^^^
 10 | 
    `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

  ! typescript-eslint(no-floating-promises): Promises must be awaited.
    ,-[test.ts:25:1]
 24 | // This should trigger a diagnostic (not disabled)
 25 | Promise.resolve(1344);
    : ^^^^^^^^^^^^^^^^^^^^^^
    `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

Found 2 warnings and 0 errors.
Finished in <variable>ms on 1 file with 103 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
