apps/oxlint/src/snapshots/fixtures__tsgolint_--type-aware --silent no-floating-promises@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --silent no-floating-promises
working directory: fixtures/tsgolint
----------
Failed to find tsgolint executable----------
CLI result: TsGoLintError
----------
