apps/oxlint/src/snapshots/fixtures__tsgolint_--type-aware -c config-type-aware-false.json no-floating-promises.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware -c config-type-aware-false.json no-floating-promises.ts
working directory: fixtures/tsgolint
----------

  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/typescript/no-floating-promises.html\typescript-eslint(no-floating-promises)]8;;\: Promises must be awaited.
   ,-[no-floating-promises.ts:2:1]
 1 | const promise = new Promise((resolve, _reject) => resolve("value"));
 2 | promise;
   : ^^^^^^^^
 3 | 
   `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
