apps/oxlint/src/snapshots/fixtures__tsgolint_--type-aware no-floating-promises -c config-test.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware no-floating-promises -c config-test.json
working directory: fixtures/tsgolint
----------
Error running tsgolint: "Failed to spawn tsgolint from path `tsgolint`, with error: No such file or directory (os error 2)"----------
CLI result: TsGoLintError
----------
