apps/oxlint/src/snapshots/fixtures__tsgolint_--type-aware test.svelte@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware test.svelte
working directory: fixtures/tsgolint
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[test.svelte:2:2]
 1 | <script>
 2 |     debugger;
   :     ^^^^^^^^^
 3 | 
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 59 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
