apps/oxlint/src/snapshots/fixtures__tsgolint_-c config-type-aware-false-with-overrides.json no-floating-promises.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c config-type-aware-false-with-overrides.json no-floating-promises.ts
working directory: fixtures/tsgolint
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 0 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
